# pelikan

src/protocol/: redis_include.h
src/protocol/data/redis/: CMakeLists.txt  compose.c  klog.c  parse.c  request.c  request.h  response.c
test/protocol/data/redis/: CMakeLists.txt  check_redis.c
